# Eindfeest

./: metingen.csv  pyproject.toml
src/eindfeest/: arduino_device.py  arduino_device2.py  diode_experiment.py  diode_experiment2.py  qt-applicatie.py  view.py  view2.py
